# Modular-RAG-Shop-Assistant-Chatbot

./: .gitignore  README.md  backend.Dockerfile  frontend.Dockerfile  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
backend/: main.py
backend/db/: mysql.py
backend/routes/: chat.py  products.py
backend/services/: gemini_chain.py  vector_store.py
data/: data_insertion.py
embeddings/: sync_pinecone.py
frontend/: app.py
