[project]
name = "modular-rag-shop-assistant-chatbot"
version = "0.1.0"
description = "A modular RAG (Retrieval-Augmented Generation) shop assistant chatbot powered by Gemini 2.5 Flash, Pinecone Vector DB, MySQL, FastAPI, and Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=1.0.0",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.3",
    "mysql-connector-python>=9.7.0",
    "pandas>=3.0.3",
    "pinecone>=6.0.0",
    "langchain-pinecone>=0.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.0",
    "streamlit>=1.45.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.48.0",
]
